...
        android:gravity="center"
        android:text="Please enter your username and password"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textFilter"
        android:textColorHint="#78909C"
        android:maxLength="15"
        android:digits="abcdefghijklmnopqrstuvwxyz01234567890"/>

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#78909C" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Login" />
</LinearLayout>
