...
        android:gravity="center"
        android:text="@string/my_profile"
        android:textColor="@color/ubc_darkblue"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_yearstanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_coop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />
...
