...
        android:textColor="@color/ubc_darkblue"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/display_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_profile_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
...
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/coop_title" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_coop"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/ubc_darkblue"
        android:text="Register"
        android:textColor="@color/white" />


</RelativeLayout>

