<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ProfilePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            app:srcCompat="@drawable/ic_baseline_logout_24" />

        <TextView
            android:id="@+id/my_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="35dp"
            android:text="@string/my_profile"
            android:textColor="@color/ubc_darkblue"
            android:textSize="34sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/edit_button_profile"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            app:srcCompat="@drawable/ic_baseline_edit_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_yearstanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textview_coop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/blocked_users_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="Blocked Users"
        android:textColor="@color/ubc_darkblue"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/find_course_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/ubc_lightblue"
        android:text="Find Course" />

    <ScrollView
        android:id="@+id/scroll_view_course_pp"
        android:layout_width="match_parent"
        android:layout_height="330dp">

        <LinearLayout
            android:id="@+id/layout_button_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <!-- filler for BottomNavigationView to stick to bottom of screen-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>