<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <Button
        android:id="@+id/coursename_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp"
        android:backgroundTint="@color/ubc_darkblue"
        android:hint="Course name"></Button>

    <ImageView
        android:id="@+id/group_chat_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_baseline_chat_24"></ImageView>

    <ImageView
        android:id="@+id/delete_course_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_baseline_close_24"></ImageView>

</LinearLayout>